# ChangeLog for dev-util/mv_perl
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*noscript-2.16 (04 Oct 2013)

  04 OCt 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Update dependencies

*noscript-2.15 (18 Aug 2013)

  10 Sep 2013; Martin Väth <martin@mvath.de>:
  Install zsh-completion unconditionally according to gentoo policy

  18 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*noscript-2.12 (03 Aug 2013)

  03 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*noscript-2.11 (02 Aug 2013)

  02 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*noscript-2.10 (17 Jul 2013)

  17 Jul 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*noscript-2.8 (21 Apr 2013)

  21 Apr 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*noscript-2.7 (20 Apr 2013)

  20 Apr 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*noscript-2.6 (28 Jan 2013)

  28 Jan 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*noscript-2.5 (11 Nov 2012)

  11 Nov 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*noscript-2.4 (10 Jun 2012)

  28 Sep 2012; Martin Väth <martin@mvath.de>:
  Bump to EAPI=5

  10 Jun 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Fixes comp regression

*noscript-2.3 (13 May 2012)

  13 May 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Fixes renreg regression

*noscript-2.2 (05 May 2012)

  12 May 2012; Martin Väth <martin@mvath.de>:
  base->eutils

  05 May 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*noscript-2.0 (21 Apr 2012)

  21 Apr 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. comp options have changed

*noscript-1.4 (10 Mar 2012)

  15 Apr 2012; Martin Väth <martin@mvath.de>:
  Inherit base
