@@ -1,1 +1,1 @@
-DIST zram-init-2.2.tar.gz 2866 SHA256 6d23f408939ec0a9db79254cce196d75f09c4b0cf0843c9eeb90deb153f13653 SHA512 f0eeaaaadde2481409db70fc91fd64155b3cc344a967ccdb4822d65989306599fe6afdea8ab2bd00d23b215a43d654c9d1bfda6b26491ad2d27b6c1093ca8e82 WHIRLPOOL 34e79e8d3f536e174689bc215a193757120880588d2751ab0c30495f7a614f0bd496e5110ce11c7be50bd19d950c242a95a478348cddcc446b879e754e75fd42
+DIST zram-init-2.3.tar.gz 4173 SHA256 8079ade133dd9eb9f5d49a86269ceeff5d7637e47acf98bc3c7e40b710d04926 SHA512 0854a7e29a5be758694f443bca4a0c09782e1996dd0ce3079bcef4be481ef2e0efb3652cd02bb99ff9ac9dcaf3c20fdc10fd1ed90b2ad92e0ff1027320fe206e WHIRLPOOL 752470a21dc55433a82695550fc41f4f5bc9154ae5382d9b489b6ad48fccf06f020fa465cdf00ccbf51657cc28569230adc695ad075bbc64623fac7e93d7d5c9
