@@ -2,13 +2,16 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*zram-init-2.3.ebuild (05 Oct 2013)
+
+  05 Oct 2013; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Support further configs and systemd
+
 *zram-init-2.2.ebuild (03 Jan 2013)
 
   10 Sep 2013; Martin Väth <martin@mvath.de>:
   Install zsh-completion unconditionally according to gentoo policy
 
-  03 Jan 2012; Martin Väth <martin@mvath.de>:
-  Version bump, remove old ebuild.
 
 *zram-init-2.1.ebuild (02 Mar 2012)
 
